examples/c/src/raylib-wasm.h

#ifndef RAYLIB_WASM
#define RAYLIB_WASM

#include <stdint.h>

#define WASM_EXPORT(name) __attribute__((export_name(name)))
#define WASM_IMPORT(name) __attribute__((import_name(name)))

// NOTE: MSVC C++ compiler does not support compound literals (C99 feature)
// Plain structures in C++ (without constructors) can be initialized with { }
#if defined(__cplusplus)
    #define CLITERAL(type)      type
#else
    #define CLITERAL(type)      (type)
#endif

// Some Basic Colors
// NOTE: Custom raylib color palette for amazing visuals on WHITE background
#define LIGHTGRAY  CLITERAL(Color){ 200, 200, 200, 255 }   // Light Gray
#define GRAY       CLITERAL(Color){ 130, 130, 130, 255 }   // Gray
#define DARKGRAY   CLITERAL(Color){ 80, 80, 80, 255 }      // Dark Gray
#define YELLOW     CLITERAL(Color){ 253, 249, 0, 255 }     // Yellow
#define GOLD       CLITERAL(Color){ 255, 203, 0, 255 }     // Gold
#define ORANGE     CLITERAL(Color){ 255, 161, 0, 255 }     // Orange
#define PINK       CLITERAL(Color){ 255, 109, 194, 255 }   // Pink
#define RED        CLITERAL(Color){ 230, 41, 55, 255 }     // Red
#define MAROON     CLITERAL(Color){ 190, 33, 55, 255 }     // Maroon
#define GREEN      CLITERAL(Color){ 0, 228, 48, 255 }      // Green
#define LIME       CLITERAL(Color){ 0, 158, 47, 255 }      // Lime
#define DARKGREEN  CLITERAL(Color){ 0, 117, 44, 255 }      // Dark Green
#define SKYBLUE    CLITERAL(Color){ 102, 191, 255, 255 }   // Sky Blue
#define BLUE       CLITERAL(Color){ 0, 121, 241, 255 }     // Blue
#define DARKBLUE   CLITERAL(Color){ 0, 82, 172, 255 }      // Dark Blue
#define PURPLE     CLITERAL(Color){ 200, 122, 255, 255 }   // Purple
#define VIOLET     CLITERAL(Color){ 135, 60, 190, 255 }    // Violet
#define DARKPURPLE CLITERAL(Color){ 112, 31, 126, 255 }    // Dark Purple
#define BEIGE      CLITERAL(Color){ 211, 176, 131, 255 }   // Beige
#define BROWN      CLITERAL(Color){ 127, 106, 79, 255 }    // Brown
#define DARKBROWN  CLITERAL(Color){ 76, 63, 47, 255 }      // Dark Brown

#define WHITE      CLITERAL(Color){ 255, 255, 255, 255 }   // White
#define BLACK      CLITERAL(Color){ 0, 0, 0, 255 }         // Black
#define BLANK      CLITERAL(Color){ 0, 0, 0, 0 }           // Blank (Transparent)
#define MAGENTA    CLITERAL(Color){ 255, 0, 255, 255 }     // Magenta
#define RAYWHITE   CLITERAL(Color){ 245, 245, 245, 255 }   // My own White (raylib logo)

// Trace log level
// NOTE: Organized by priority level
typedef enum {
    LOG_ALL = 0,        // Display all logs
    LOG_TRACE,          // Trace logging, intended for internal use only
    LOG_DEBUG,          // Debug logging, used for internal debugging, it should be disabled on release builds
    LOG_INFO,           // Info logging, used for program execution info
    LOG_WARNING,        // Warning logging, used on recoverable failures
    LOG_ERROR,          // Error logging, used on unrecoverable failures
    LOG_FATAL,          // Fatal logging, used to abort program: exit(EXIT_FAILURE)
    LOG_NONE            // Disable logging
} TraceLogLevel;

// Color, 4 components, R8G8B8A8 (32bit)
typedef struct Color {
    int r;        // Color red value
    int g;        // Color green value
    int b;        // Color blue value
    int a;        // Color alpha value
} Color;

WASM_EXPORT("Init") void Init();
WASM_EXPORT("UpdateDrawFrame") void UpdateDrawFrame();
WASM_EXPORT("Close") void Close();

WASM_IMPORT("InitWindow")
void InitWindow(int width, int height, const char *title);

WASM_IMPORT("BeginDrawing")
void BeginDrawing();

WASM_IMPORT("ClearBackgroundExpanded")
void ClearBackgroundExpanded(int r, int g, int b, int a);

WASM_IMPORT("DrawTextExpanded")
void DrawTextExpanded(const char *text, int posX, int posY, int fontSize, int r, int g, int b, int a);

WASM_IMPORT("SetTargetFPS")
void SetTargetFPS(int fps);

WASM_IMPORT("EndDrawing")
void EndDrawing();

WASM_IMPORT("CloseWindow")
void CloseWindow();

WASM_IMPORT("TraceLog")
void TraceLog(int logLevel, const char* text);

#ifndef ClearBackground
#define ClearBackground(color) ClearBackgroundExpanded((color).r, (color).g, (color).b, (color).a)
#endif

#ifndef DrawText
#define DrawText(text, posX, posY, fontSize, color) DrawTextExpanded((text), (posX), (posY), (fontSize), (color).r, (color).g, (color).b, (color).a)
#endif

#endif  // RAYLIB_WASM